Adicionando pdf volume